fix error display plp on iphone and ipad

--- a/star_ecommerce/web-tinhocngoisao/wp-content/themes/online-shop-child/private/scss/_page.scss
+++ b/star_ecommerce/web-tinhocngoisao/wp-content/themes/online-shop-child/private/scss/_page.scss
@@ -234,6 +234,7 @@ header#masthead {
     marquee {
         padding: 3px 3px 3px 0;
         font-weight: bold;
+        width: 100%;
         a {
             color: #333;
             margin-right: 15px;
